@@ -537,7 +537,7 @@
 //-- NPC_STOP
 342,0,0,0,10000,0
 //-- NPC_CHANGEUNDEAD
-348,0,0,0,1800000,0
+348,0,0,0,30000,0
 //-- NPC_POWERUP
 349,0,0,0,60000:120000:180000:240000:300000,0
 //-- NPC_AGIUP
